# kiro-account-manager

./: .gitattributes  .gitignore  .versionrc.cjs  .versionrc.js  AGENTS.md  CLAUDE.md  GATEWAY_IMPROVEMENTS.md  HALL_OF_SHAME.md  README.md  README_ru-RU.md  README_zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
.github/workflows/: release.yml
.kiro/hooks/: release.kiro.hook  rust-check.kiro.hook  sync-translations.kiro.hook  tauri-context.kiro.hook
.kiro/steering/: DUAL_REPO_WORKFLOW.md  TAURI2_RELEASE_WORKFLOW.md  chat-style.md  code-quality.md  dialog-design.md  external-files.md  git-rules.md  hooks-guide.md  kiro-gateway.md  kiro-ide-source.md  kirogate.md  migration-headlessui.md  portal.md  product.md  project-info.md  structure.md  subagent.md  tech.md  ui-design.md  ui-style.md  vercel-api.md  web-tools.md
locales/: en-US.json  ru-RU.json  zh-CN.json
portal/: README.md  package.json  tsconfig.json
portal/api/: announcement.ts  refresh.ts  usage.ts
portal/public/: api-test.html  gateway.html  index.html
public/: theme-preload.js
scripts/: test_token_refresh_regions.py
scripts/register/: accounts.json  amazonq_auto_register.py  amazonq_auto_register_v1.py  amazonq_auto_register_v2.py  import_registered.py  register_gui_v1.py  register_gui_v2.py  registered_accounts 2.json
src/: App.jsx  App.test.ts  App.tsx  i18n.jsx  i18n.tsx  index.css  main.jsx  main.test.ts  main.tsx  routes.jsx  routes.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_session_parse.rs
src-tauri/.cargo/: config.toml
src-tauri/src/: account.rs  auto_refresh.rs  auto_switch.contract.test.mjs  auto_switch.rs  aws_sso_client.rs  browser.rs  cmd_output.rs  custom_agents.rs  deep_link_handler.rs  http_client.rs  kiro.rs  kiro_auth_client.rs  kiro_cli_db.rs  kiro_portal_client.rs  main.rs  mcp.rs  model_lock.rs  powers.rs  state.rs  tray_behavior.rs
src-tauri/src/auth/: mod.rs  window_navigation.rs
src-tauri/src/auth/providers/: mod.rs  social.rs
src-tauri/src/clients/: aws_sso_client.rs  http_client.rs  kiro_auth_client.rs  kiro_portal_client.rs  kiro_q_client.rs
src-tauri/src/commands/: account_cmd.contract.test.mjs  account_cmd.rs  account_models.rs  app_data_cmd.rs  app_settings_cmd.rs  auth_cmd.rs  cache_cmd.rs  cli_config_cmd.rs  common.rs  custom_agents_cmd.rs  gateway_cmd.rs  group_tag_cmd.rs  hooks_cmd.rs  kiro_cli_cmd.rs  kiro_gate_cmd.rs  kiro_settings_cmd.rs  mcp_cmd.rs  mitm_cmd.rs  mod.rs  powers_cmd.rs  proxy_cmd.rs  session_manager.rs  skills_cmd.rs  sso_import_cmd.rs  steering_cmd.rs  update_cmd.rs  web_oauth_cmd.rs
src-tauri/src/commands/machine_guid/: mod.rs  windows.rs
src-tauri/src/core/: account.rs  auto_switch.rs  deep_link_handler.rs  mod.rs  usage.rs
src-tauri/src/gateway/: compress.rs  converter.rs  eventstream.rs  load_balancer.rs  log_store.rs  mod.rs  models.rs  prompt_cache.rs  prompt_filter.rs  proxy.rs  response_cache.rs  stream.rs  thinking_parser.rs  token_cache.rs  token_estimator.rs
src-tauri/src/kiro/: ide.rs  process.rs
src-tauri/src/kiro_gate/: auth.rs  converter.rs  logger.rs  metrics.rs  mod.rs  models.rs  server.rs
src-tauri/src/mitm/: cert_manager.rs  mitm_log.rs  mod.rs  proxy_server.rs
src-tauri/src/models/: ide_session.rs  mod.rs
src-tauri/src/providers/: base.rs  idc.rs  mod.rs  social.rs  web_oauth.rs
src-tauri/src/services/: mod.rs  session_storage.rs
src-tauri/src/tasks/: mod.rs  token_refresh.rs
src-tauri/tests/: gateway_comprehensive_test.rs  gateway_core_test.rs  token_limit_test.rs
src/api/: groupTag.js  groupTag.ts  sessionApi.ts
src/components/: About.jsx  AccountDetailModal.jsx  AnnouncementModal.jsx  Home.jsx  (+8 more)
(+294 files in other folders)
