[package]
name = "kiro-account-manager"
version = "1.5.10"
description = "Kiro Account Manager - 管理 Kiro IDE 账号，支持多账号切换和配额监控"
authors = ["hj01857655"]
license = "GPL-3.0"
repository = "https://github.com/hj01857655/kiro-account-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5"
open = "5.0"
tiny_http = "0.12"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
ciborium = "0.2"
regex = "1.10"
once_cell = "1.19"
hex = "0.4"
cookie = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 开发配置：增量编译加速
[profile.dev]
incremental = true

# 发布配置：优化二进制体积
[profile.release]
codegen-units = 1  # 允许 LLVM 更好的优化
lto = true         # 启用链接时优化
opt-level = "s"    # 优先小体积（用 "3" 优先性能）
panic = "abort"    # 禁用 panic 处理器，提升性能
strip = true       # 移除调试符号
